<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:fillViewport="true"
    tools:context=".NewEditListaActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        android:background="@drawable/shape_bg_login"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nova_lista_label"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:gravity="center"
            android:layout_gravity="top"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etListName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nome_da_lista" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDtCompra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/data_da_compra" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:text="@string/repetir_label" />
            <Spinner
                android:id="@+id/periodo_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="110dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="20dp"
                android:layout_row="0"
                android:layout_column="1"
                android:text="@string/periodo_label"
                android:layout_gravity="center">
            </Spinner>
        </GridLayout>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etOrcamento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/orcamento" />

        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSalvarLista"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="32dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/colorAccent"
            android:minHeight="56dp"
            android:text="@string/salvar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/img_listou" />
    </LinearLayout>

</ScrollView>
</layout>