<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background"
        android:fillViewport="true"
        tools:context=".NewItemActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="80dp"
            android:background="@drawable/shape_bg_login"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/labelItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/novo_item_label"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:gravity="center"
                android:layout_gravity="top"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etItemName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nome_do_item_label" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etQtd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/quantidade_label"
                    android:inputType="number"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSalvarItem"
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="32dp"
                android:layout_marginTop="32dp"
                android:backgroundTint="@color/colorAccent"
                android:minHeight="56dp"
                android:text="@string/salvar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_gravity="bottom"
                android:src="@drawable/img_listou" />
        </LinearLayout>

    </ScrollView>
</layout>