<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@drawable/gradient_background"
    tools:context=".HomeActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="142dp"
        android:layout_height="174dp"
        android:baselineAligned="false"
        android:elevation="1"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="150dp"
        android:background="@drawable/shape_bg_login"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="40dp">


        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:columnCount="2"
            android:columnOrderPreserved="false"
            android:padding="15dp"
            android:rowCount="2">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_lista"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/cardBkg"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="18dp"
                        android:src="@drawable/list_notebook_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/minha_lista"
                        android:textColor="@color/colorAccent"
                        android:textSize="18sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_calendario"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/cardBkg"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="18dp"
                        android:src="@drawable/office_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/calendario"
                        android:textColor="@color/colorAccent"
                        android:textSize="18sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_senha"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/cardBkg"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="18dp"
                        android:src="@drawable/page_security" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/trocarSenha"
                        android:textColor="@color/colorAccent"
                        android:textSize="18sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_sair"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/cardBkg"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:layout_marginTop="18dp"
                        android:src="@drawable/exit_logout_open_out_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/sair"
                        android:textColor="@color/colorAccent"
                        android:textSize="18sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </GridLayout>

    </LinearLayout>

</LinearLayout>