<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background"
        android:fillViewport="true"
        tools:context=".MainActivity">


        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="413dp"
            android:layout_height="451dp"
            android:background="@drawable/shape_bg_login"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent">


            <TextView
                android:id="@+id/text_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/text2_login"
                android:layout_gravity="left"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="Olá, comprador(a)."
                android:textSize="26sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text2_login"
                android:layout_width="218dp"
                android:layout_height="wrap_content"
                android:layout_above="@+id/img_logo"
                android:layout_gravity="left"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="50dp"
                android:text="Entre para continuar"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    tools:ignore="TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="32dp"
                android:layout_marginTop="32dp"
                android:backgroundTint="#2855AE"
                android:minHeight="56dp"
                android:text="@string/login"
                app:icon="@drawable/baseline_arrow_right_alt_white_18"
                app:iconGravity="end"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="169dp"
            android:layout_height="168dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="-20dp"
            android:baselineAligned="false"

            android:elevation="1dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/logo" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>